# Copyright (C) 2014-2016 AscEmu Team <http://www.ascemu.org>

# set runtime binary where all compiled (before install) binary will compiled in
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/) # rename to Modules
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/2) # rename to Modules

#All script libraries have SCRIPTLIB defined.
add_definitions(-DSCRIPTLIB -DSKIP_ALLOCATOR_SHARING)

# add our modules
#add_subdirectory(Battlegrounds)

#check if scripts are selected
if(NOT ${BUILD_SCRIPTS2})
  message(WARNING, "BUILD_SCRIPTS2 option is set to false. Modules libraries will not be built.")
  return()
endif()
add_subdirectory(Reloader)
add_subdirectory(Announce)
add_subdirectory(Announcement)
add_subdirectory(COTTAXI)
add_subdirectory(DPanel)
add_subdirectory(EnterWorld)
add_subdirectory(GankGuard)
add_subdirectory(GM_Stone2)
add_subdirectory(GuildCreate)
add_subdirectory(McGoyver)
add_subdirectory(OnFirstEnterWorld)
add_subdirectory(OnGuildjoin)
add_subdirectory(OnPlayerFirstEnterWorld)
add_subdirectory(Tokens)
add_subdirectory(Vekjik_Gossip)
add_subdirectory(WishingStone)
#add_subdirectory(AntiPvPAtMall)
#add_subdirectory(Auto_Revive)
#add_subdirectory(AutoMailer)
#add_subdirectory(AVM)
#add_subdirectory(BattleMage)
#add_subdirectory(BGNPC)
#add_subdirectory(Buffer)
#add_subdirectory(CaladrielTeleporter)
#add_subdirectory(WDoctor)
#add_subdirectory(WeaponDropper)
#add_subdirectory(UberMorpher)
#add_subdirectory(PayNPC)
#add_subdirectory(PlayerXP)
#add_subdirectory(PlayMovieOnFirstLogin)
#add_subdirectory(PowerTeleporter)
#add_subdirectory(Professions)
#add_subdirectory(ProtctionOnLoging)
#add_subdirectory(ProximityHeal)
#add_subdirectory(PVP_SYSTEM)
#add_subdirectory(PvPAnner)
#add_subdirectory(PvpMoneynpc)
#add_subdirectory(PvPToken)
#add_subdirectory(Reputationnpc)
#add_subdirectory(Runebook)
#add_subdirectory(Skillnpc)
#add_subdirectory(TeleCopter)
#add_subdirectory(Titlenpc)
#add_subdirectory(TitleVendor2)
#add_subdirectory(OnLogoutReguest)
#add_subdirectory(Menu)
#add_subdirectory(MMOPRO1)
#add_subdirectory(Monsterporternpc)
#add_subdirectory(Morpher)
#add_subdirectory(MorpherNPC)
#add_subdirectory(Mounter)
#add_subdirectory(MountNPC)
#add_subdirectory(NoobHelper)
#add_subdirectory(HaraldTeleporter)
#add_subdirectory(HealNPC)
#add_subdirectory(HouseNPC)
#add_subdirectory(into_hyjal)
#add_subdirectory(LegorionTeleporter)
#add_subdirectory(LuaHypArc)
#add_subdirectory(LvlToken)
#add_subdirectory(MaxSkill)
#add_subdirectory(GMHelper)
#add_subdirectory(Eventporter1)
#add_subdirectory(Eventporter2)
#add_subdirectory(ezLUAScripting)
#add_subdirectory(FreeMoneyNPC)
#add_subdirectory(FriendPorter)
#add_subdirectory(Reloader)
#add_subdirectory(CustomNPC)
#add_subdirectory(Disconnect)
#add_subdirectory(getout_hyjal)
#add_subdirectory(GlobalNPC)
#add_subdirectory(GM_Stone)
